--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-    background-image: url("images/table.png");
-    background-size: cover;
+    /* background-image: url("images/table.png");
+    background-size: cover; */
     font-weight: bold;
-    color: white;
+    color: #016f32;
     text-align: center;
 }
 
